--- a/CSS/css19.css
+++ b/CSS/css19.css
@@ -8,9 +8,11 @@ body {
     background-color: #222222;
     width:100%;
     flex-direction: row;
+    position: relative;
 }
 .logo {
     padding:1%;
+    max-width: 100px;;
     width:10%;
     margin-left:auto;
     display: inline-block;
@@ -20,11 +22,14 @@ body {
     height: auto;
 }
 .navigation {
-    padding:1%;
+    padding:10px;
     margin-top: 10px;
     margin-right: 20px;
-    margin-left: 20px;
+    margin-left: 60px;
     margin-bottom: 10px;
+    position:absolute;
+    top: 5%;
+    bottom:5%;
 }
 ul {
     margin:0;
@@ -33,7 +38,7 @@ ul {
 ul > li {
     display: inline-block;
     text-align: center;
-    padding:5px;
+    padding:15px;
     color:#eeeeee;
     font-family: "Comfortaa";
     font-weight: bold;
@@ -42,15 +47,20 @@ ul > li {
 .flexContainer {
     display: flex;
     flex-direction: row;
+    position:sticky;
+    top:0;
 }
 #leftProfile {
     width:25%;
     text-align: center;
     margin-top: 100px;
+
 }
 #leftProfile > img {
     width: 250px;
     height: auto;
+    border-radius: 50%;
+    filter: drop-shadow(5px 5px 4px #6667ab);
 }
 
 .profile {
@@ -80,11 +90,17 @@ i {
     color: #6667ab;
     place-self: center;
 }
+.socialGroup:hover img {
+    color: #2E2F65;
+}
 #resume {
     font-size: 18px;
     font-family: "Comfortaa";
     font-weight: bold;
     text-decoration: underline;
+}
+#resume:hover {
+    color: #2E2F65;
 }
 #rightContent {
     width:75%;
@@ -92,7 +108,6 @@ i {
     background-color: #6667ab;
 }
 #heading {
-
 }
 h1 {
     font-family: "Amethysta", serif;
@@ -101,8 +116,8 @@ h1 {
     color: #eeeeee;
 }
 #heading > h3 {
-    margin-left: 210px;
-    margin-right: 210px;
+    margin-left: 300px;
+    margin-right: 300px;
     text-align: left;
     font-family: "Comfortaa";
     font-size: 18px;
@@ -116,10 +131,12 @@ h1 {
     position: relative;
     max-width: 800px;
     margin:0 auto;
-    
 }
 .slides {
     display: none;
+}
+.slides:hover {
+    filter: drop-shadow(5px 5px 4px #222222);
 }
 .slides > img {
     width: 100%;
@@ -147,8 +164,12 @@ h1 {
 .prev {
     left:0;
 }
+.prev:hover, .next:hover {
+    background-color: #222222;
+}
 .scrollDots {
-    margin-right:220px;
+    margin-left: 200px;
+    margin-right:200px;
     text-align: center;
 }
 .dot {
@@ -161,10 +182,29 @@ h1 {
     display: inline-block;
     transition: background-color 0.6s ease;
 }
+.active, .dot:hover {
+    background-color: #2E2F65;
+}
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+  @-webkit-keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
+  
+  @keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
 #caption {
     margin:0;
     text-align: left;
-    text-indent: 210px;
+    text-indent: 310px;
 }
 #pagebreak {
     width: auto;
@@ -182,6 +222,9 @@ h1 {
 .skill1, .skill2, .skill3 {
     margin: 80px;
     color:#eeeeee;
+    font-size: 16px;
+    font-weight: 400;
+    font-family: "Comfortaa";
 }
 .skill1 > h2 {
     font-family: "Comfortaa";
@@ -198,10 +241,8 @@ h1 {
     font-size: 18px;
     font-weight: 400;
 }
-.skill1, .skill2, .skill3 {
-    font-size: 16px;
-    font-weight: 400;
-    font-family: "Comfortaa";
+.skill1, .skill2, .skill3, p {
+    margin: 0px 60px 20px 60px
 }
 /*Footer*/
 footer {
@@ -225,5 +266,6 @@ footer {
 .copyright > P {
     font-family: "Amethysta",serif;
     color:#eeeeee;
+    margin: 20px;
 }
 
